@@ -217,6 +217,10 @@ Bug Fixes
 13. SOLR-413: Requesting a large numbers of documents to be returned (limit)
     can result in an out-of-memory exception, even for a small index. (yonik)
 
+14. The CSV loader incorrectly threw an exception when given
+    header=true (the default).  (ryan, yonik)
+
+
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
     build scripts to make two jars: apache-solr-1.3.jar and 
